# ai-translator

./: .env.sample  .flake8  .gitignore  README.md  main.py  pyproject.toml  translator.py
